@startuml

title __LOGINREGISTRAZIONE's Class Diagram__\n

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace View.loginRegistrazione {
        class com.unidates.Unidates.UniDates.View.loginRegistrazione.LoginPage {
            {static} + ROUTE : CharSequence
            {static} + TEXT : String
            ~ erroreLogin : String
            - loginForm : LoginForm
            + LoginPage()
            + create()
            - createLayoutSinistro()
            - createLeyoutDestro()
            - createLinkToRegister()
            - createLoginI18n()
        }
      }
    }
  }
  

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace View.loginRegistrazione {
        class com.unidates.Unidates.UniDates.View.loginRegistrazione.RegistrazioneAccountPage {
            {static} + TEXT : String
            - conferma_password : PasswordField
            - email : TextField
            - password : PasswordField
            + create()
            + createLayoutDestro()
            - RegistrazioneAccountPage()
            - createFormFields()
            - createLayoutSinistro()
        }
      }
    }
  }
  

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace View.loginRegistrazione {
        class com.unidates.Unidates.UniDates.View.loginRegistrazione.RegistrazioneProfiloPage {
            - altezza : NumberField
            - capelli : Select<String>
            - checkbox : Checkbox
            - checkboxGroup : CheckboxGroup<String>
            - cognome : TextField
            - contatto_ig : TextField
            - image : MemoryBuffer
            - interessi : Select<String>
            - luogo_di_nascita : TextField
            - nome : TextField
            - numero : TextField
            - occhi : Select<String>
            - picker : DatePicker
            - residenza : TextField
            - sessi : RadioButtonGroup<String>
            + RegistrazioneProfiloPage()
            + create()
            + primo()
            + secondo()
            - checkMaggiorenne()
            - createComponent()
            - createTextComponent()
        }
      }
    }
  }
  

  com.unidates.Unidates.UniDates.View.loginRegistrazione.LoginPage -up-|> com.vaadin.flow.component.orderedlayout.FlexLayout
  com.unidates.Unidates.UniDates.View.loginRegistrazione.RegistrazioneAccountPage -up-|> com.vaadin.flow.component.orderedlayout.FlexLayout
  com.unidates.Unidates.UniDates.View.loginRegistrazione.RegistrazioneAccountPage o-- com.unidates.Unidates.UniDates.Control.UserManagementControl : userManagementControl
  com.unidates.Unidates.UniDates.View.loginRegistrazione.RegistrazioneProfiloPage -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unidates.Unidates.UniDates.View.loginRegistrazione.RegistrazioneProfiloPage o-- com.unidates.Unidates.UniDates.Control.ModifyProfileControl : modifyProfileControl
  com.unidates.Unidates.UniDates.View.loginRegistrazione.RegistrazioneProfiloPage o-- com.unidates.Unidates.UniDates.Control.UserManagementControl : userManagementControl
  com.unidates.Unidates.UniDates.View.loginRegistrazione.RegistrazioneProfiloPage o-- com.unidates.Unidates.UniDates.DTOs.FotoDTO : toadd


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
